--- a/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
+++ b/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Q6N-Yg-PGF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Q6N-Yg-PGF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -38,7 +38,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9pm-Ao-chk" id="Ra9-uc-sih">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -74,7 +74,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXV-fa-vN6">
-                                <rect key="frame" x="37" y="230" width="301" height="85"/>
+                                <rect key="frame" x="37" y="230" width="301" height="121"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="301" id="OcR-pu-dOv"/>
                                 </constraints>
@@ -83,7 +83,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6e-6X-Chn">
-                                <rect key="frame" x="108" y="323" width="160" height="21"/>
+                                <rect key="frame" x="108" y="363" width="160" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20.5" id="jMx-Ls-OVZ"/>
                                     <constraint firstAttribute="width" constant="160" id="yXC-l6-j52"/>
@@ -93,7 +93,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMf-Vh-5j1">
-                                <rect key="frame" x="107" y="387" width="160" height="33"/>
+                                <rect key="frame" x="107" y="427" width="160" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="GBB-oS-Hjr"/>
                                     <constraint firstAttribute="width" constant="160" id="pCO-8R-NXE"/>
@@ -103,7 +103,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mSc-zF-3cT">
-                                <rect key="frame" x="5" y="319" width="75" height="30"/>
+                                <rect key="frame" x="5" y="359" width="75" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="ssm-jd-afH"/>
                                 </constraints>
@@ -112,7 +112,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0e7-kC-JFF">
-                                <rect key="frame" x="132" y="486" width="111" height="59"/>
+                                <rect key="frame" x="132" y="526" width="111" height="59"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="111" id="KHb-XP-5Ty"/>
                                     <constraint firstAttribute="height" constant="59" id="R4K-pW-Is4"/>
@@ -123,14 +123,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNu-ty-X75">
-                                <rect key="frame" x="142" y="448" width="91" height="30"/>
+                                <rect key="frame" x="142" y="488" width="91" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="HK0-bI-O3M"/>
                                     <constraint firstAttribute="height" constant="30" id="ehw-5c-lgr"/>
                                 </constraints>
                                 <state key="normal" title="Calculate"/>
                                 <connections>
-                                    <action selector="Calculatr:" destination="tha-Li-RdE" eventType="touchUpInside" id="m1K-4j-OeU"/>
+                                    <action selector="Calculater:" destination="tha-Li-RdE" eventType="touchUpInside" id="wEZ-Ky-VOP"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sx4-y4-A3q">
@@ -141,13 +141,13 @@
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dvc-iv-oqG">
-                                <rect key="frame" x="5" y="388" width="75" height="32"/>
+                                <rect key="frame" x="5" y="428" width="75" height="32"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHZ-Jv-SK3">
-                                <rect key="frame" x="129" y="546" width="116" height="30"/>
+                                <rect key="frame" x="129" y="586" width="116" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="View on Walmart"/>
                                 <connections>
@@ -159,20 +159,20 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="OXV-fa-vN6" secondAttribute="trailing" constant="21" id="0Kn-jO-xep"/>
                             <constraint firstItem="OXV-fa-vN6" firstAttribute="leading" secondItem="CYD-AG-dm7" secondAttribute="leadingMargin" constant="21" id="5Fk-7Q-msD"/>
-                            <constraint firstItem="g6e-6X-Chn" firstAttribute="centerY" secondItem="CYD-AG-dm7" secondAttribute="centerY" id="6Vs-dM-Lwi"/>
+                            <constraint firstItem="g6e-6X-Chn" firstAttribute="centerY" secondItem="CYD-AG-dm7" secondAttribute="centerY" constant="40" id="6Vs-dM-Lwi"/>
                             <constraint firstAttribute="leadingMargin" secondItem="dvc-iv-oqG" secondAttribute="leading" constant="11" id="Aie-er-KXo"/>
                             <constraint firstItem="dvc-iv-oqG" firstAttribute="centerY" secondItem="UMf-Vh-5j1" secondAttribute="centerY" id="Cvc-wb-GyL"/>
                             <constraint firstItem="pNu-ty-X75" firstAttribute="top" secondItem="UMf-Vh-5j1" secondAttribute="bottom" constant="28" id="D38-hC-YPs"/>
                             <constraint firstItem="OXV-fa-vN6" firstAttribute="top" secondItem="sx4-y4-A3q" secondAttribute="bottom" constant="8" id="DLg-iN-0Jr"/>
                             <constraint firstItem="g6e-6X-Chn" firstAttribute="centerX" secondItem="CYD-AG-dm7" secondAttribute="centerX" id="EOF-My-UO2"/>
-                            <constraint firstItem="g6e-6X-Chn" firstAttribute="top" secondItem="OXV-fa-vN6" secondAttribute="bottom" constant="7.5" id="K5n-3c-aAn"/>
+                            <constraint firstItem="g6e-6X-Chn" firstAttribute="top" secondItem="OXV-fa-vN6" secondAttribute="bottom" constant="12" id="K5n-3c-aAn"/>
                             <constraint firstItem="mSc-zF-3cT" firstAttribute="leading" secondItem="CYD-AG-dm7" secondAttribute="leading" constant="5" id="MOJ-si-dyF"/>
                             <constraint firstItem="UMf-Vh-5j1" firstAttribute="top" secondItem="g6e-6X-Chn" secondAttribute="bottom" constant="43" id="N0S-ds-wDB"/>
                             <constraint firstItem="UMf-Vh-5j1" firstAttribute="centerX" secondItem="CYD-AG-dm7" secondAttribute="centerX" id="O58-SI-pAP"/>
                             <constraint firstItem="sx4-y4-A3q" firstAttribute="leading" secondItem="CYD-AG-dm7" secondAttribute="leadingMargin" constant="52" id="Pfh-ln-X9h"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sx4-y4-A3q" secondAttribute="trailing" constant="52" id="Pvo-fg-TUB"/>
                             <constraint firstItem="UMf-Vh-5j1" firstAttribute="centerX" secondItem="CYD-AG-dm7" secondAttribute="centerX" id="R7R-Vh-1Dn"/>
-                            <constraint firstItem="mSc-zF-3cT" firstAttribute="centerY" secondItem="CYD-AG-dm7" secondAttribute="centerY" id="XXg-9Z-Pek"/>
+                            <constraint firstItem="mSc-zF-3cT" firstAttribute="centerY" secondItem="CYD-AG-dm7" secondAttribute="centerY" constant="40.5" id="XXg-9Z-Pek"/>
                             <constraint firstItem="sx4-y4-A3q" firstAttribute="top" secondItem="VyM-aR-yki" secondAttribute="bottom" constant="8" id="ZFi-j2-bMT"/>
                             <constraint firstItem="pNu-ty-X75" firstAttribute="centerX" secondItem="CYD-AG-dm7" secondAttribute="centerX" id="ZMo-Zl-qAk"/>
                             <constraint firstItem="0e7-kC-JFF" firstAttribute="centerX" secondItem="CYD-AG-dm7" secondAttribute="centerX" id="lbR-Fp-tLh"/>
@@ -192,7 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1sn-T7-U1O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2145" y="107"/>
+            <point key="canvasLocation" x="2144.8000000000002" y="106.59670164917542"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="AjY-37-aqE">
@@ -234,7 +234,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BTa-GF-YIZ" id="4cF-4K-QDw">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-MH-BI1">
